syntax = "proto3";
package DomainServices.OfferService;
option csharp_namespace = "DomainServices.OfferService.Contracts";

import "Types.proto";

message PrintBuildingSavingsOfferRequest {
   int32 OfferInstanceId = 1;
   DealerData Dealer = 2;
}
message PrintBuildingSavingsOfferResponse {
   int32 OfferInstanceId = 1;
   string ContentType = 2;
   bytes FileData = 3;
}
